--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
+bleach==6.2.0
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.1.1
 Flask==3.0.2
 Flask-Login==0.6.3
-Flask-WTF==1.2.1
-email-validator==2.1.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.2.4
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Markdown==3.8.2
+MarkupSafe==3.0.2
 PyMySQL==1.1.1
-SQLAlchemy==2.0.29
 python-dotenv==1.0.1
+SQLAlchemy==2.0.43
+typing_extensions==4.14.1
+webencodings==0.5.1
+Werkzeug==3.1.3
+WTForms==3.2.1
